--- a/Controller/src/main/resources/templates/clients/CategoryChoosen.html
+++ b/Controller/src/main/resources/templates/clients/CategoryChoosen.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    xmlns="http://www.w3.org/1999/xhtml" layout:decorator="~{home-layout}">
+    xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Hanuman&display=swap" rel="stylesheet">
+    <th:block th:include="~{fragment/__bootstrap_link}"></th:block>
     <style>
         /* .card {
             border: 0px !important;
@@ -16,7 +18,11 @@
         }
 
         .v-test-40 {
-            max-height: 30vh;
+            max-height: 50vh;
+            border-radius: 25%;
+        }
+        .v-test-40 > .card-header{
+            border-bottom: 0px;
         }
         /* card */
         .group-two > div{ 
@@ -26,7 +32,7 @@
             margin-bottom: 2%;
         }
         .group-two>div:hover{
-            background-color: #E5EAED !important;
+            /* background-color: #E5EAED !important; */
             box-shadow: 05px 10px 18px rgba(33,33,33,.2); 
            
         }
@@ -67,16 +73,25 @@
         left-side-bar-div
 -->
 <body>
- 
-   
+  
+    
     <!-- BODY -->
-    <div class="content " layout:fragment="content">
+    <div class="content " >
         <!-- border border-dark -->
        <div class=" m-5 ">
             <div class="group-one my-5">
                 <h1>Please Choose Your Favorite Category</h1>
             </div>
             <div class="d-flex flex-wrap justify-content-around group-two">
+                <div class="card v-test-40 text-center" th:each="category : ${CATEGORIES}">
+                    <div class="card-header">
+                        <img th:src="${category.image}" class="" >
+                    </div>
+                   <div class="card-body">
+                        <h3 class="card-text py-2" th:text="${category.name}">Technology</h3>
+                   </div>
+                </div>
+                
                 <div class="card v-test-40 text-center">
                     <div class="card-header">
                         <img src="/image-static/coupledrink.png" class="" >
@@ -171,7 +186,8 @@
        </div>
     </div>
     <!-- BODY -->
-  
-  
+    <div th:replace="~{footer/__footer}"></div>
+    <th:block th:include="~{fragment/__javascript_link}"></th:block>
+
 </body>
 </html>
