--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -1,4 +1,23 @@
 <style>
+
+        #notification_div_body::-webkit-scrollbar-track
+        {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            background-color: #F5F5F5;
+        }
+
+        #notification_div_body::-webkit-scrollbar
+        {
+            width: 10px;
+            background-color: #F5F5F5;
+        }
+
+        #notification_div_body::-webkit-scrollbar-thumb
+        {
+            background-color: #000000;
+            border: 2px solid #555555;
+        }
+
      .icon-linear-color{
         background: #393939;
         -webkit-background-clip: text;
@@ -64,8 +83,8 @@
      }
 
      .notification-menu-title {
-         color:#ff7788;
-         font-size:1.5rem;
+         color:#393939;
+         /* font-size:1.5rem; */
          display:inline-block;
      }
 
@@ -92,17 +111,20 @@
 
      .notifications a.notifications-content {
          text-decoration:none;
-         background:#ccc;
+        background-color: #fff;
 
      }
-
+     a.notifications-content:hover{
+        background-color:#ccc;
+     }
      .notifications-item {
          padding:10px;
          margin:5px;
-         background:#ccc;
          border-radius:4px;
      }
-
+     .notifications-item:hover{
+        background-color:#ccc;
+     }
     .item-info{
         font-size: 14px;
     }
@@ -153,7 +175,9 @@
     </button>
 
     <a class="navbar-brand ml-4 text-dark" href="/homepage">
-        <h3 class="icon-linear-color"><b>KUNLOES</b></h3>
+        <h3 class="icon-linear-color">
+            <b>KUNLOES</b>
+        </h3>
     </a>
     <div class="mx-auto  text-center w-75 d-none d-lg-block">
       
@@ -186,10 +210,11 @@
                     <h5 th:class="${CURRENT_PAGE == 'category'}?'icon-linear-color page-active':'icon-linear-color'"  >Category</h5>
                 </a>
             </li>
-            <li class="nav-item  ">
+            <li class="nav-item  "  sec:authorize="isAuthenticated()">
                 <div class="dropdown ">
                     <a class="nav-link text-center  d-none d-lg-block" href="#" id="dLabel" role="button" data-toggle="dropdown" data-target="#" aria-haspopup="true" aria-expanded="false">
                         <img class="" src="/icon/notification-navbar-v2.svg" style="width: 28px; height: 28px;" alt="">
+                        <sup id="num_of_notification" class="" style="color: #393939; position: absolute; top: 10px;"></sup>
                     </a>
 <!--                    <div class="notify-drop dropdown-menu notifications dropdown-menu-customized dropdown-menu-right mt-3" style="width: 100px;" aria-labelledby="notification">-->
 <!--                        <ul class="list-group">-->
@@ -201,47 +226,47 @@
 
 
 <!--                    CH note-->
-                    <ul class="dropdown-menu notifications dropdown-menu-customized " role="menu" aria-labelledby="dLabel">
+                    <ul class="dropdown-menu notifications dropdown-menu-customized " role="menu" aria-labelledby="dLabel" id=" style-scroll">
 
-                        <div class="notification-heading">
-                            <h4 class="notification-menu-title">Notifications</h4>
+                        <div class="notification-heading  border-bottom">
+                            <b class="notification-menu-title">Notifications</b>
 <!--                            <h4 class="notification-menu-title pull-right">View all<i class="glyphicon glyphicon-circle-arrow-right"></i></h4>-->
                         </div>
                         <li class="divider"></li>
-                        <div class="notifications-wrapper ">
-                            <a class="notifications-content" href="#">
+                        <div class="notifications-wrapper " id="notification_div_body">
+                            <a class="notifications-content d-none" href="#">
                                 <div class="notifications-item">
                                     <h6 class="item-title">New article has been posted in Entertainment</h6>
                                     <p class="item-info text-muted"><i>2</i>&nbsp;<i>Hours ago</i></p>
                                 </div>
 
                             </a>
-                            <a class="notifications-content" href="#">
+                            <a class="notifications-content d-none" href="#">
                                 <div class="notifications-item">
                                     <h6 class="item-title">New article has been posted in Entertainment</h6>
                                     <p class="item-info text-muted"><i>2</i>&nbsp;<i>Hours ago</i></p>
                                 </div>
                             </a>
-                            <a class="notifications-content" href="#">
+                            <a class="notifications-content d-none" href="#">
                                 <div class="notifications-item">
                                     <h6 class="item-title">New article has been posted in Entertainment</h6>
                                     <p class="item-info text-muted"><i>2</i>&nbsp;<i>Hours ago</i></p>
                                 </div>
                             </a>
-                            <a class="notifications-content" href="#">
+                            <a class="notifications-content d-none" href="#">
                                 <div class="notifications-item">
                                     <h6 class="item-title">New article has been posted in Entertainment</h6>
                                     <p class="item-info text-muted"><i>2</i>&nbsp;<i>Hours ago</i></p>
                                 </div>
 
                             </a>
-                            <a class="notifications-content" href="#">
+                            <a class="notifications-content d-none" href="#">
                                 <div class="notifications-item">
                                     <h6 class="item-title">New article has been posted in Entertainment</h6>
                                     <p class="item-info text-muted"><i>2</i>&nbsp;<i>Hours ago</i></p>
                                 </div>
                             </a>
-                            <a class="notifications-content" href="#">
+                            <a class="notifications-content d-none" href="#">
                                 <div class="notifications-item">
                                     <h6 class="item-title">New article has been posted in Entertainment</h6>
                                     <p class="item-info text-muted"><i>2</i>&nbsp;<i>Hours ago</i></p>
@@ -250,7 +275,9 @@
 
                         </div>
                         <li class="divider buttom-divider "></li>
-                        <div class="notification-footer"><h4 class="notification-menu-title">View all<i class="glyphicon glyphicon-circle-arrow-right"></i></h4></div>
+                        <div class="notification-footer">
+                            <!-- <h4 class="notification-menu-title">View all<i class="glyphicon glyphicon-circle-arrow-right"></i></h4> -->
+                        </div>
                     </ul>
 <!--                    End CH note-->
 
@@ -258,7 +285,7 @@
 
                 </div>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item "  sec:authorize="isAuthenticated()">
                 <div class="dropdown ">
 
                     <a class="nav-link text-center  d-none d-lg-block" href="#" id="profile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">  
@@ -287,11 +314,17 @@
                            <ul class="list-group list-group-flush border-top">
                             <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin/customize';">Customize</li>
                             <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin';">Admin</li>
+                            <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/logout';">Logout</li>
                            </ul>
                         </div>
                     </div>
                   </div>
                 
+            </li>
+            <li th:class="${#authorization.expression('isAuthenticated()') == true} ? 'd-none' : 'nav-item' ">
+                <a class="nav-link text-center text-dark" href="/login">
+                    <img class="" src="/icon/user-navbar-v2.svg" style="width: 28px; height: 28px;" alt="">
+                </a>
             </li>
         </ul>
         <ul class="d-md-block d-lg-none">
