--- a/Controller/src/main/resources/templates/client-home.html
+++ b/Controller/src/main/resources/templates/client-home.html
@@ -411,7 +411,7 @@
 //     alert(myContent.replace(/(<([^>]+)>)/ig,""));
 // });
              
-</script>
+</script>ssss
     </div>
 </body>
 </html>
