--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -143,6 +143,7 @@
         cursor: pointer; 
     }
 </style>
+<link rel="stylesheet" href="../css/maTooltip.css">
 <nav class="navbar navbar-expand-lg bg-white border-bottom" >
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTopRightSide" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon ">
@@ -158,14 +159,14 @@
     <div class="mx-auto  text-center w-75 d-none d-lg-block">
       
         <div class="mx-auto w-50 search-bar-parent-div d-flex">
-            <input type="text" class="form-control-one-line search-bar" style="" placeholder="&nbsp;&nbsp; Search"  >
+            <input type="text" id="srch" class="form-control-one-line search-bar"  style="" placeholder="&nbsp;&nbsp; Search"  >
             <button class="border-0 bg-transparent d-flex">  
                 <i class="material-icons-new outline-search" style="color: #0000008 !important; "></i>
+                
             </button>
            
         </div>
     </div>
-   
     
     <div class="collapse navbar-collapse" id="navbarTopRightSide">
         
