--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -184,8 +184,8 @@
       
         <div class="mx-auto w-50 search-bar-parent-div d-flex">
             <input type="text" id="srch" class="form-control-one-line search-bar"   placeholder="Search"  >
-            <button class="border-0 bg-transparent d-flex">  
-                <i class="material-icons-new outline-search" style="color: #0000008 !important; "></i>
+            <button class="border-0 bg-transparent d-flex" id="srchBody">  
+                <i class="material-icons-new outline-search" style="color: #0000008 !important; " ></i>
                 
             </button>
            
