--- a/Controller/src/main/resources/templates/clients/contentDetail.html
+++ b/Controller/src/main/resources/templates/clients/contentDetail.html
@@ -91,6 +91,7 @@
                                               class="point myButton"
                                               data-toggle="tooltip" data-html="true"> Kong Pengsea</span>
                             </div>
+                            <span id="time"></span>
                         </div>
                     </div>
                 </div>
@@ -192,15 +193,13 @@
                          data-holder-rendered="true">
 
                 </div>
-                <div class="col-9 col-sm-9 col-md-10 col-lg-11 pr-0 pl-0 my-auto">
+                <div class="col-10 col-sm-10 col-md-11 col-lg-11 pr-0 pl-0 my-auto">
                     <div class="form-group my-auto">
                         <input type="email" class="form-control" id="commentInp" placeholder="Comment">
                     </div>
                     <!--  <input style="width: -webkit-fill-available;" placeholder="comment" type="text" name="" id="">-->
                 </div>
-                <div class="col-1 col-sm-1 col-md-1   btn-send" style="    padding-top: 10px;">
-                    <input type="button" value="send">
-                </div>
+
             </div>
 
             <div class="row" style="border-bottom: 1px solid #dadada;">
@@ -345,16 +344,17 @@
 
             $.ajax({
                 type: 'GET',
-                url: 'http://localhost:8080/api/contents/[[${id}]]',
+                url: '/api/contents/[[${id}]]',
                 contentType: false,
                 processData: false,
                 success: function (data) {
-
+                    console.log(data)
                     $('#bContent').append(data["body"]);
                     $('#myButton').text(data["user"].name);
                     $('#ownerImg').attr('src', data["user"].profilePicture);
                     $('#tt').html(data["title"]);
                     $('#category').html(data.category.name);
+                    $('#time').html(data["timestamp"])
                     var locate = data["user"].location //getter
                     var bio = data["user"].bio;
                     var src = data["user"].profilePicture;
@@ -390,11 +390,14 @@
         $("#commentInp").on('keypress', function (e) {
 
             var obj = {
-
+                "user":{
+                    "id": [[${currentUser.getId()}]]
+                },
                 "text": $("#commentInp").val(),
                 "content": {
                     "id": [[${id}]]
-                },
+                }
+
 
             }
             if (e.which == 13) {
@@ -404,7 +407,7 @@
                 }
                 $.ajax({
                     type: "POST",
-                    url: 'http://localhost:8080/api/comments',
+                    url: '/api/comments',
                     data: JSON.stringify(obj),
                     success: function (data) {
                         console.log(data)
@@ -412,18 +415,18 @@
                                 <div class="row" style=" margin-left: 0;">
                                         <div class="col-2 col-sm-2 col-md-1  pr-0">
                                             <img class=" rounded-circle z-depth-2"
-                                                style="width: 80px; width: 60px; height: 60px; float: right;" alt="100x100" src= ""
+                                                style="width: 80px; width: 60px; height: 60px; float: right;" alt="100x100" src= [[${currentUser.getProfilePicture()}]]
                                                 data-holder-rendered="true">
                                         </div>
                                         <div class="col-10 col-sm-10 col-md-11">
                                             <div class="container-fluid ml-0 pr-0 mr-0">
                                                 <div class="row">
-                                                    <span style="color: #07D" >ds</span>
+                                                    <span style="color: #07D" >[[${currentUser.getName()}]] </span>
                                                     <span style="color: #918989; font-size: 12px; padding-top: 4px;">
                                                         &nbsp;&nbsp;&nbsp;&#8226; 22 days ago</span>
                                                 </div>
                                             <div class="row" style="color: #46464e;" id="cmt">` +
-                            $("#commentInp").val() + `
+                                                      $("#commentInp").val() + `
                                                 </div>
                                             </div>
                                         </div>
@@ -446,7 +449,7 @@
         function showComment(page) {
             $.ajax({
                 type: 'GET',
-                url: 'http://localhost:8080/api/comments/search/findAllBycontentIdOrderById?id=' + [[${id}]] + '&page=' + page + '&size=3',
+                url: '/api/comments/search/findAllBycontentIdOrderById?id=' + [[${id}]] + '&page=' + page + '&size=3',
                 contentType: false,
                 processData: false,
                 success: function (data) {
@@ -501,11 +504,14 @@ console.log(data)
 
                 "content": {
                     "id": [[${id}]]
+                },
+                "user":{
+                    "id": [[${currentUser.getId()}]]
                 }
             }
                 $.ajax({
                     type: "POST",
-                    url: 'http://localhost:8080/api/interesteds',
+                    url: '/api/interesteds',
                     data: JSON.stringify(obj),
                     success: function (data) {
                         $("#likeNum").text(parseInt($('#likeNum').text()) + 1)
@@ -526,8 +532,8 @@ console.log(data)
                 var feedback={
                     "text": feedbackText,
                     "status": 1,
-                    "user": {
-                        "id": [[${currentUser}]]
+                    "user":{
+                        "id": [[${currentUser.getId()}]]
                     },
                     "content":{
                         "id": [[${id}]]
@@ -535,7 +541,7 @@ console.log(data)
                 }
                 $.ajax({
                     type: "POST",
-                    url: 'http://localhost:8080/api/feedbacks',
+                    url: '/api/feedbacks',
                     data: JSON.stringify(feedback),
                     success: function (data) {
                         console.log("successfully send feedback")
