Wed week 4 merge

--- a/Controller/src/main/resources/templates/admin/admin-home.html
+++ b/Controller/src/main/resources/templates/admin/admin-home.html
@@ -24,24 +24,24 @@
                 <div class="d-flex flex-lg-row flex-column justify-content-around">
                     <div class="card p-2 border-0" style="width: 25%;">
                         <div class="m-4">
-                            <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
+                            <img src="/icon/question-v4-1.svg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <h3 class="card-title ">
-                                <b>User</b>
+                                <b>Question</b>
                                 
                             </h3>
                             <p class="card-text">
                                 Manage Your Reader 
                             </p>
-                            <button class="btn btn-success ">
+                            <a  class="btn btn-success text-white " href="/admin/question">
                                Get Started
-                            </button>
+                            </a>
                         </div>
                     </div>
                     <div class="card p-2 border-0" style="width: 25%;">
                         <div class="m-4">
-                            <img src="/image-static/content.svg" class="card-img-top" alt="...">
+                            <img src="/icon/article-v2.svg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <h3 class="card-title text-center">
@@ -50,25 +50,25 @@
                             <p class="card-text">
                                 Manage Article List
                             </p>
-                            <button class="btn btn-success te">
+                            <a class="btn btn-success text-white"  href="/admin/article">
                                 Get Started
-                            </button>
+                            </a>
                         </div>
                     </div>
                     <div class="card p-2 border-0" style="width: 25%;">
                         <div class="m-4">
-                            <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
+                            <img src="/icon/feedback-v2.svg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <h3 class="card-title text-center">
-                                <b>Category</b>
+                                <b>Feedback</b>
                             </h3>
                             <p class="card-text">
-                                Update Your Category
+                                Customize Your Information
                             </p>
-                            <button class="btn btn-success te">
+                            <a class="btn btn-success text-white" href="/admin/feedback">
                                 Get Started
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
