--- a/Controller/src/main/resources/templates/clients/contentDetail.html
+++ b/Controller/src/main/resources/templates/clients/contentDetail.html
@@ -342,6 +342,7 @@
             doc.text('Hello world!', 10, 10)
             let _title = document.getElementById("tt").innerText
             console.log(_title)
+            // doc.fromHTML(source,10,10);
             doc.save(`${_title}.pdf`)
         }
     </script>
